// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getExtendedMarkupWithLoadFunction() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return markup and script tag without load() call 1`] = `
<p-button>SomeButton</p-button>
<script>
  porscheDesignSystem.load();

  console.log()
</script>
`;

exports[`getExtendedMarkupWithLoadFunction() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return markup without load() call 1`] = `
<p-button>Some snippet</p-button>

<script>
  porscheDesignSystem.load();
</script>
`;

exports[`getExtendedMarkupWithLoadFunction() stable storefront release (e.g. /v2/…, /v3/…) should return markup and load() call within existing script tag 1`] = `
<p-button>SomeButton</p-button>
<script>
  porscheDesignSystem.load();

  console.log()
</script>
`;

exports[`getExtendedMarkupWithLoadFunction() stable storefront release (e.g. /v2/…, /v3/…) should return markup and load() call within its own script tag 1`] = `
<p-button>Some snippet</p-button>

<script>
  porscheDesignSystem.load();
</script>
`;

exports[`getIndexHtml() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct markup when chosen pds version for bug reporting 1`] = `
<!doctype html>
<html lang="en">

  <head>
    <meta charset="utf-8" />
    <title>Porsche Design System - Vanilla JS</title>
    <script src="node_modules/@porsche-design-system/components-js/index.js"></script>

    <!-- prettier-ignore -->
    <style data-pds-initial-styles>
      html,
      body {
        margin: 0;
        padding: 0;
        font-family: 'Porsche Next', 'Arial Narrow', Arial, 'Heiti SC', SimHei, sans-serif;
        line-height: calc(6px + 2.125ex);
        letter-spacing: normal;
        text-size-adjust: none;
        -webkit-text-size-adjust: none
      }

      h1,
      h2,
      h3,
      h4,
      h5,
      h6 {
        font-weight: 600
      }

      p {
        hyphens: auto;
        font-weight: 400;
        overflow-wrap: break-word
      }

      b,
      strong {
        font-weight: 700
      }

      p-accordion,
      p-banner,
      p-button,
      p-button-group,
      p-button-pure,
      p-button-tile,
      p-carousel,
      p-checkbox-wrapper,
      p-content-wrapper,
      p-crest,
      p-display,
      p-divider,
      p-fieldset,
      p-fieldset-wrapper,
      p-flex,
      p-flex-item,
      p-flyout,
      p-flyout-navigation,
      p-flyout-navigation-item,
      p-grid,
      p-grid-item,
      p-heading,
      p-headline,
      p-icon,
      p-inline-notification,
      p-link,
      p-link-pure,
      p-link-social,
      p-link-tile,
      p-link-tile-model-signature,
      p-marque,
      p-modal,
      p-model-signature,
      p-multi-select,
      p-multi-select-option,
      p-pagination,
      p-pin-code,
      p-popover,
      p-radio-button-wrapper,
      p-scroller,
      p-segmented-control,
      p-segmented-control-item,
      p-select-wrapper,
      p-spinner,
      p-stepper-horizontal,
      p-stepper-horizontal-item,
      p-switch,
      p-table,
      p-table-body,
      p-table-cell,
      p-table-head,
      p-table-head-cell,
      p-table-head-row,
      p-table-row,
      p-tabs,
      p-tabs-bar,
      p-tabs-item,
      p-tag,
      p-tag-dismissible,
      p-text,
      p-text-field-wrapper,
      p-text-list,
      p-text-list-item,
      p-textarea-wrapper,
      p-toast,
      p-wordmark {
        visibility: hidden
      }

      .hydrated,
      .ssr {
        visibility: inherit
      }

      :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a {
        color: currentcolor !important;
        transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25, 0.1, 0.25, 1) !important;
        margin-left: -2px !important;
        margin-right: -2px !important;
        padding-left: 2px !important;
        border-radius: 4px !important;
        padding-right: 2px !important;
        text-decoration: underline !important
      }

      :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 0 !important
      }

      :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:focus:not(:focus-visible) {
        outline-color: transparent !important
      }

      :is(p-text-field-wrapper) input::-webkit-outer-spin-button,
      :is(p-text-field-wrapper) input::-webkit-inner-spin-button,
      :is(p-text-field-wrapper) input::-webkit-search-decoration,
      :is(p-text-field-wrapper) input::-webkit-search-cancel-button,
      :is(p-text-field-wrapper) input::-webkit-calendar-picker-indicator {
        display: none !important
      }

      :is(p-table) img {
        vertical-align: middle !important
      }

      :is(p-button-tile, p-link-tile, p-link-tile-model-signature) picture img {
        width: 100% !important;
        height: 100% !important;
        object-fit: cover !important
      }

      @media(hover:hover) {
        :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:hover {
          background: rgba(148, 149, 152, .18) !important
        }
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"] {
        border-radius: 1px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 2px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus:not(:focus-visible) {
        outline-color: transparent !important
      }
    </style>

    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body dir="ltr">
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct markup with externalDependencies 1`] = `
<!doctype html>
<html lang="en">

  <head>
    <meta charset="utf-8" />
    <title>Porsche Design System - Vanilla JS</title>
    <script src="./@porsche-design-system/components-js/index.js"></script>
    < s c r i p t s r c="
    n
    o
    d
    e
    _
    m
    o
    d
    u
    l
    e
    s
    /
    i
    m
    a
    s
    k
    /
    d
    i
    s
    t
    /
    i
    m
    a
    s
    k
    .
    m
    i
    n
    .
    j
    s
    ">
      < / s c r i p t>

        <!-- prettier-ignore -->
        <style data-pds-initial-styles>
          html,
          body {
            margin: 0;
            padding: 0;
            font-family: 'Porsche Next', 'Arial Narrow', Arial, 'Heiti SC', SimHei, sans-serif;
            line-height: calc(6px + 2.125ex);
            letter-spacing: normal;
            text-size-adjust: none;
            -webkit-text-size-adjust: none
          }

          h1,
          h2,
          h3,
          h4,
          h5,
          h6 {
            font-weight: 600
          }

          p {
            hyphens: auto;
            font-weight: 400;
            overflow-wrap: break-word
          }

          b,
          strong {
            font-weight: 700
          }

          p-accordion,
          p-banner,
          p-button,
          p-button-group,
          p-button-pure,
          p-button-tile,
          p-carousel,
          p-checkbox-wrapper,
          p-content-wrapper,
          p-crest,
          p-display,
          p-divider,
          p-fieldset,
          p-fieldset-wrapper,
          p-flex,
          p-flex-item,
          p-flyout,
          p-flyout-navigation,
          p-flyout-navigation-item,
          p-grid,
          p-grid-item,
          p-heading,
          p-headline,
          p-icon,
          p-inline-notification,
          p-link,
          p-link-pure,
          p-link-social,
          p-link-tile,
          p-link-tile-model-signature,
          p-marque,
          p-modal,
          p-model-signature,
          p-multi-select,
          p-multi-select-option,
          p-pagination,
          p-pin-code,
          p-popover,
          p-radio-button-wrapper,
          p-scroller,
          p-segmented-control,
          p-segmented-control-item,
          p-select-wrapper,
          p-spinner,
          p-stepper-horizontal,
          p-stepper-horizontal-item,
          p-switch,
          p-table,
          p-table-body,
          p-table-cell,
          p-table-head,
          p-table-head-cell,
          p-table-head-row,
          p-table-row,
          p-tabs,
          p-tabs-bar,
          p-tabs-item,
          p-tag,
          p-tag-dismissible,
          p-text,
          p-text-field-wrapper,
          p-text-list,
          p-text-list-item,
          p-textarea-wrapper,
          p-toast,
          p-wordmark {
            visibility: hidden
          }

          .hydrated,
          .ssr {
            visibility: inherit
          }

          :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a {
            color: currentcolor !important;
            transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25, 0.1, 0.25, 1) !important;
            margin-left: -2px !important;
            margin-right: -2px !important;
            padding-left: 2px !important;
            border-radius: 4px !important;
            padding-right: 2px !important;
            text-decoration: underline !important
          }

          :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:focus {
            outline: 2px solid #1A44EA !important;
            outline-offset: 0 !important
          }

          :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:focus:not(:focus-visible) {
            outline-color: transparent !important
          }

          :is(p-text-field-wrapper) input::-webkit-outer-spin-button,
          :is(p-text-field-wrapper) input::-webkit-inner-spin-button,
          :is(p-text-field-wrapper) input::-webkit-search-decoration,
          :is(p-text-field-wrapper) input::-webkit-search-cancel-button,
          :is(p-text-field-wrapper) input::-webkit-calendar-picker-indicator {
            display: none !important
          }

          :is(p-table) img {
            vertical-align: middle !important
          }

          :is(p-button-tile, p-link-tile, p-link-tile-model-signature) picture img {
            width: 100% !important;
            height: 100% !important;
            object-fit: cover !important
          }

          @media(hover:hover) {
            :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:hover {
              background: rgba(148, 149, 152, .18) !important
            }
          }

          p-tabs-bar~[tabindex="0"][role="tabpanel"] {
            border-radius: 1px !important
          }

          p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus {
            outline: 2px solid #1A44EA !important;
            outline-offset: 2px !important
          }

          p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus:not(:focus-visible) {
            outline-color: transparent !important
          }
        </style>

        <style>
          html,
          body {
            margin: 0;
            padding: 0;
          }

          Some global styles
        </style>
  </head>

  <body dir="ltr">
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct markup without externalDependencies 1`] = `
<!doctype html>
<html lang="en">

  <head>
    <meta charset="utf-8" />
    <title>Porsche Design System - Vanilla JS</title>
    <script src="./@porsche-design-system/components-js/index.js"></script>

    <!-- prettier-ignore -->
    <style data-pds-initial-styles>
      html,
      body {
        margin: 0;
        padding: 0;
        font-family: 'Porsche Next', 'Arial Narrow', Arial, 'Heiti SC', SimHei, sans-serif;
        line-height: calc(6px + 2.125ex);
        letter-spacing: normal;
        text-size-adjust: none;
        -webkit-text-size-adjust: none
      }

      h1,
      h2,
      h3,
      h4,
      h5,
      h6 {
        font-weight: 600
      }

      p {
        hyphens: auto;
        font-weight: 400;
        overflow-wrap: break-word
      }

      b,
      strong {
        font-weight: 700
      }

      p-accordion,
      p-banner,
      p-button,
      p-button-group,
      p-button-pure,
      p-button-tile,
      p-carousel,
      p-checkbox-wrapper,
      p-content-wrapper,
      p-crest,
      p-display,
      p-divider,
      p-fieldset,
      p-fieldset-wrapper,
      p-flex,
      p-flex-item,
      p-flyout,
      p-flyout-navigation,
      p-flyout-navigation-item,
      p-grid,
      p-grid-item,
      p-heading,
      p-headline,
      p-icon,
      p-inline-notification,
      p-link,
      p-link-pure,
      p-link-social,
      p-link-tile,
      p-link-tile-model-signature,
      p-marque,
      p-modal,
      p-model-signature,
      p-multi-select,
      p-multi-select-option,
      p-pagination,
      p-pin-code,
      p-popover,
      p-radio-button-wrapper,
      p-scroller,
      p-segmented-control,
      p-segmented-control-item,
      p-select-wrapper,
      p-spinner,
      p-stepper-horizontal,
      p-stepper-horizontal-item,
      p-switch,
      p-table,
      p-table-body,
      p-table-cell,
      p-table-head,
      p-table-head-cell,
      p-table-head-row,
      p-table-row,
      p-tabs,
      p-tabs-bar,
      p-tabs-item,
      p-tag,
      p-tag-dismissible,
      p-text,
      p-text-field-wrapper,
      p-text-list,
      p-text-list-item,
      p-textarea-wrapper,
      p-toast,
      p-wordmark {
        visibility: hidden
      }

      .hydrated,
      .ssr {
        visibility: inherit
      }

      :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a {
        color: currentcolor !important;
        transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25, 0.1, 0.25, 1) !important;
        margin-left: -2px !important;
        margin-right: -2px !important;
        padding-left: 2px !important;
        border-radius: 4px !important;
        padding-right: 2px !important;
        text-decoration: underline !important
      }

      :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 0 !important
      }

      :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:focus:not(:focus-visible) {
        outline-color: transparent !important
      }

      :is(p-text-field-wrapper) input::-webkit-outer-spin-button,
      :is(p-text-field-wrapper) input::-webkit-inner-spin-button,
      :is(p-text-field-wrapper) input::-webkit-search-decoration,
      :is(p-text-field-wrapper) input::-webkit-search-cancel-button,
      :is(p-text-field-wrapper) input::-webkit-calendar-picker-indicator {
        display: none !important
      }

      :is(p-table) img {
        vertical-align: middle !important
      }

      :is(p-button-tile, p-link-tile, p-link-tile-model-signature) picture img {
        width: 100% !important;
        height: 100% !important;
        object-fit: cover !important
      }

      @media(hover:hover) {
        :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:hover {
          background: rgba(148, 149, 152, .18) !important
        }
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"] {
        border-radius: 1px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 2px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus:not(:focus-visible) {
        outline-color: transparent !important
      }
    </style>

    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body dir="ltr">
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() stable storefront release (e.g. /v2/…, /v3/…) should return correct markup when chosen pds version for bug reporting 1`] = `
<!doctype html>
<html lang="en">

  <head>
    <meta charset="utf-8" />
    <title>Porsche Design System - Vanilla JS</title>
    <script src="node_modules/@porsche-design-system/components-js/index.js"></script>

    <!-- prettier-ignore -->
    <style data-pds-initial-styles>
      html,
      body {
        margin: 0;
        padding: 0;
        font-family: 'Porsche Next', 'Arial Narrow', Arial, 'Heiti SC', SimHei, sans-serif;
        line-height: calc(6px + 2.125ex);
        letter-spacing: normal;
        text-size-adjust: none;
        -webkit-text-size-adjust: none
      }

      h1,
      h2,
      h3,
      h4,
      h5,
      h6 {
        font-weight: 600
      }

      p {
        hyphens: auto;
        font-weight: 400;
        overflow-wrap: break-word
      }

      b,
      strong {
        font-weight: 700
      }

      p-accordion,
      p-banner,
      p-button,
      p-button-group,
      p-button-pure,
      p-button-tile,
      p-carousel,
      p-checkbox-wrapper,
      p-content-wrapper,
      p-crest,
      p-display,
      p-divider,
      p-fieldset,
      p-fieldset-wrapper,
      p-flex,
      p-flex-item,
      p-flyout,
      p-flyout-navigation,
      p-flyout-navigation-item,
      p-grid,
      p-grid-item,
      p-heading,
      p-headline,
      p-icon,
      p-inline-notification,
      p-link,
      p-link-pure,
      p-link-social,
      p-link-tile,
      p-link-tile-model-signature,
      p-marque,
      p-modal,
      p-model-signature,
      p-multi-select,
      p-multi-select-option,
      p-pagination,
      p-pin-code,
      p-popover,
      p-radio-button-wrapper,
      p-scroller,
      p-segmented-control,
      p-segmented-control-item,
      p-select-wrapper,
      p-spinner,
      p-stepper-horizontal,
      p-stepper-horizontal-item,
      p-switch,
      p-table,
      p-table-body,
      p-table-cell,
      p-table-head,
      p-table-head-cell,
      p-table-head-row,
      p-table-row,
      p-tabs,
      p-tabs-bar,
      p-tabs-item,
      p-tag,
      p-tag-dismissible,
      p-text,
      p-text-field-wrapper,
      p-text-list,
      p-text-list-item,
      p-textarea-wrapper,
      p-toast,
      p-wordmark {
        visibility: hidden
      }

      .hydrated,
      .ssr {
        visibility: inherit
      }

      :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a {
        color: currentcolor !important;
        transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25, 0.1, 0.25, 1) !important;
        margin-left: -2px !important;
        margin-right: -2px !important;
        padding-left: 2px !important;
        border-radius: 4px !important;
        padding-right: 2px !important;
        text-decoration: underline !important
      }

      :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 0 !important
      }

      :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:focus:not(:focus-visible) {
        outline-color: transparent !important
      }

      :is(p-text-field-wrapper) input::-webkit-outer-spin-button,
      :is(p-text-field-wrapper) input::-webkit-inner-spin-button,
      :is(p-text-field-wrapper) input::-webkit-search-decoration,
      :is(p-text-field-wrapper) input::-webkit-search-cancel-button,
      :is(p-text-field-wrapper) input::-webkit-calendar-picker-indicator {
        display: none !important
      }

      :is(p-table) img {
        vertical-align: middle !important
      }

      :is(p-button-tile, p-link-tile, p-link-tile-model-signature) picture img {
        width: 100% !important;
        height: 100% !important;
        object-fit: cover !important
      }

      @media(hover:hover) {
        :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:hover {
          background: rgba(148, 149, 152, .18) !important
        }
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"] {
        border-radius: 1px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 2px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus:not(:focus-visible) {
        outline-color: transparent !important
      }
    </style>

    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body dir="ltr">
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() stable storefront release (e.g. /v2/…, /v3/…) should return correct markup with externalDependencies 1`] = `
<!doctype html>
<html lang="en">

  <head>
    <meta charset="utf-8" />
    <title>Porsche Design System - Vanilla JS</title>
    <script src="node_modules/@porsche-design-system/components-js/index.js"></script>
    < s c r i p t s r c="
    n
    o
    d
    e
    _
    m
    o
    d
    u
    l
    e
    s
    /
    i
    m
    a
    s
    k
    /
    d
    i
    s
    t
    /
    i
    m
    a
    s
    k
    .
    m
    i
    n
    .
    j
    s
    ">
      < / s c r i p t>

        <!-- prettier-ignore -->
        <style data-pds-initial-styles>
          html,
          body {
            margin: 0;
            padding: 0;
            font-family: 'Porsche Next', 'Arial Narrow', Arial, 'Heiti SC', SimHei, sans-serif;
            line-height: calc(6px + 2.125ex);
            letter-spacing: normal;
            text-size-adjust: none;
            -webkit-text-size-adjust: none
          }

          h1,
          h2,
          h3,
          h4,
          h5,
          h6 {
            font-weight: 600
          }

          p {
            hyphens: auto;
            font-weight: 400;
            overflow-wrap: break-word
          }

          b,
          strong {
            font-weight: 700
          }

          p-accordion,
          p-banner,
          p-button,
          p-button-group,
          p-button-pure,
          p-button-tile,
          p-carousel,
          p-checkbox-wrapper,
          p-content-wrapper,
          p-crest,
          p-display,
          p-divider,
          p-fieldset,
          p-fieldset-wrapper,
          p-flex,
          p-flex-item,
          p-flyout,
          p-flyout-navigation,
          p-flyout-navigation-item,
          p-grid,
          p-grid-item,
          p-heading,
          p-headline,
          p-icon,
          p-inline-notification,
          p-link,
          p-link-pure,
          p-link-social,
          p-link-tile,
          p-link-tile-model-signature,
          p-marque,
          p-modal,
          p-model-signature,
          p-multi-select,
          p-multi-select-option,
          p-pagination,
          p-pin-code,
          p-popover,
          p-radio-button-wrapper,
          p-scroller,
          p-segmented-control,
          p-segmented-control-item,
          p-select-wrapper,
          p-spinner,
          p-stepper-horizontal,
          p-stepper-horizontal-item,
          p-switch,
          p-table,
          p-table-body,
          p-table-cell,
          p-table-head,
          p-table-head-cell,
          p-table-head-row,
          p-table-row,
          p-tabs,
          p-tabs-bar,
          p-tabs-item,
          p-tag,
          p-tag-dismissible,
          p-text,
          p-text-field-wrapper,
          p-text-list,
          p-text-list-item,
          p-textarea-wrapper,
          p-toast,
          p-wordmark {
            visibility: hidden
          }

          .hydrated,
          .ssr {
            visibility: inherit
          }

          :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a {
            color: currentcolor !important;
            transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25, 0.1, 0.25, 1) !important;
            margin-left: -2px !important;
            margin-right: -2px !important;
            padding-left: 2px !important;
            border-radius: 4px !important;
            padding-right: 2px !important;
            text-decoration: underline !important
          }

          :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:focus {
            outline: 2px solid #1A44EA !important;
            outline-offset: 0 !important
          }

          :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:focus:not(:focus-visible) {
            outline-color: transparent !important
          }

          :is(p-text-field-wrapper) input::-webkit-outer-spin-button,
          :is(p-text-field-wrapper) input::-webkit-inner-spin-button,
          :is(p-text-field-wrapper) input::-webkit-search-decoration,
          :is(p-text-field-wrapper) input::-webkit-search-cancel-button,
          :is(p-text-field-wrapper) input::-webkit-calendar-picker-indicator {
            display: none !important
          }

          :is(p-table) img {
            vertical-align: middle !important
          }

          :is(p-button-tile, p-link-tile, p-link-tile-model-signature) picture img {
            width: 100% !important;
            height: 100% !important;
            object-fit: cover !important
          }

          @media(hover:hover) {
            :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:hover {
              background: rgba(148, 149, 152, .18) !important
            }
          }

          p-tabs-bar~[tabindex="0"][role="tabpanel"] {
            border-radius: 1px !important
          }

          p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus {
            outline: 2px solid #1A44EA !important;
            outline-offset: 2px !important
          }

          p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus:not(:focus-visible) {
            outline-color: transparent !important
          }
        </style>

        <style>
          html,
          body {
            margin: 0;
            padding: 0;
          }

          Some global styles
        </style>
  </head>

  <body dir="ltr">
    Some markup
  </body>

</html>
`;

exports[`getIndexHtml() stable storefront release (e.g. /v2/…, /v3/…) should return correct markup without externalDependencies 1`] = `
<!doctype html>
<html lang="en">

  <head>
    <meta charset="utf-8" />
    <title>Porsche Design System - Vanilla JS</title>
    <script src="node_modules/@porsche-design-system/components-js/index.js"></script>

    <!-- prettier-ignore -->
    <style data-pds-initial-styles>
      html,
      body {
        margin: 0;
        padding: 0;
        font-family: 'Porsche Next', 'Arial Narrow', Arial, 'Heiti SC', SimHei, sans-serif;
        line-height: calc(6px + 2.125ex);
        letter-spacing: normal;
        text-size-adjust: none;
        -webkit-text-size-adjust: none
      }

      h1,
      h2,
      h3,
      h4,
      h5,
      h6 {
        font-weight: 600
      }

      p {
        hyphens: auto;
        font-weight: 400;
        overflow-wrap: break-word
      }

      b,
      strong {
        font-weight: 700
      }

      p-accordion,
      p-banner,
      p-button,
      p-button-group,
      p-button-pure,
      p-button-tile,
      p-carousel,
      p-checkbox-wrapper,
      p-content-wrapper,
      p-crest,
      p-display,
      p-divider,
      p-fieldset,
      p-fieldset-wrapper,
      p-flex,
      p-flex-item,
      p-flyout,
      p-flyout-navigation,
      p-flyout-navigation-item,
      p-grid,
      p-grid-item,
      p-heading,
      p-headline,
      p-icon,
      p-inline-notification,
      p-link,
      p-link-pure,
      p-link-social,
      p-link-tile,
      p-link-tile-model-signature,
      p-marque,
      p-modal,
      p-model-signature,
      p-multi-select,
      p-multi-select-option,
      p-pagination,
      p-pin-code,
      p-popover,
      p-radio-button-wrapper,
      p-scroller,
      p-segmented-control,
      p-segmented-control-item,
      p-select-wrapper,
      p-spinner,
      p-stepper-horizontal,
      p-stepper-horizontal-item,
      p-switch,
      p-table,
      p-table-body,
      p-table-cell,
      p-table-head,
      p-table-head-cell,
      p-table-head-row,
      p-table-row,
      p-tabs,
      p-tabs-bar,
      p-tabs-item,
      p-tag,
      p-tag-dismissible,
      p-text,
      p-text-field-wrapper,
      p-text-list,
      p-text-list-item,
      p-textarea-wrapper,
      p-toast,
      p-wordmark {
        visibility: hidden
      }

      .hydrated,
      .ssr {
        visibility: inherit
      }

      :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a {
        color: currentcolor !important;
        transition: background var(--p-transition-duration, 0.25s) cubic-bezier(0.25, 0.1, 0.25, 1) !important;
        margin-left: -2px !important;
        margin-right: -2px !important;
        padding-left: 2px !important;
        border-radius: 4px !important;
        padding-right: 2px !important;
        text-decoration: underline !important
      }

      :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 0 !important
      }

      :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:focus:not(:focus-visible) {
        outline-color: transparent !important
      }

      :is(p-text-field-wrapper) input::-webkit-outer-spin-button,
      :is(p-text-field-wrapper) input::-webkit-inner-spin-button,
      :is(p-text-field-wrapper) input::-webkit-search-decoration,
      :is(p-text-field-wrapper) input::-webkit-search-cancel-button,
      :is(p-text-field-wrapper) input::-webkit-calendar-picker-indicator {
        display: none !important
      }

      :is(p-table) img {
        vertical-align: middle !important
      }

      :is(p-button-tile, p-link-tile, p-link-tile-model-signature) picture img {
        width: 100% !important;
        height: 100% !important;
        object-fit: cover !important
      }

      @media(hover:hover) {
        :is(p-accordion, p-banner, p-carousel, p-checkbox-wrapper, p-display, p-flyout, p-heading, p-headline, p-inline-notification, p-modal, p-multi-select, p-pin-code, p-popover, p-radio-button-wrapper, p-select-wrapper, p-switch, p-table, p-tabs, p-text, p-text-field-wrapper, p-text-list, p-textarea-wrapper) a:hover {
          background: rgba(148, 149, 152, .18) !important
        }
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"] {
        border-radius: 1px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus {
        outline: 2px solid #1A44EA !important;
        outline-offset: 2px !important
      }

      p-tabs-bar~[tabindex="0"][role="tabpanel"]:focus:not(:focus-visible) {
        outline-color: transparent !important
      }
    </style>

    <style>
      html,
      body {
        margin: 0;
        padding: 0;
      }

      Some global styles
    </style>
  </head>

  <body dir="ltr">
    Some markup
  </body>

</html>
`;

exports[`getIndexJs() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct no script when pds version is chosen for bug reporting 1`] = `""`;

exports[`getIndexJs() development mode or non stable storefront release (e.g. /issue/…, /release/…) should return correct script 1`] = `
"import * as porscheDesignSystem from './@porsche-design-system/components-js';
window.porscheDesignSystem = porscheDesignSystem;"
`;

exports[`getIndexJs() stable storefront release (e.g. /v2/…, /v3/…) should return correct no script when pds version is chosen for bug reporting 1`] = `""`;

exports[`getIndexJs() stable storefront release (e.g. /v2/…, /v3/…) should return correct no script when pds version is not chosen for bug reporting 1`] = `""`;
